--- a/style.css
+++ b/style.css
@@ -44,3 +44,73 @@
   #options-container button:hover{
     background-color: #11042b;
   }
+  #options-container button:disabled {
+    border: 1.5px solid #808080;
+    color: #808080;
+    background-color: #efefef;
+  }
+  #options-container button.active {
+    background-color: #220d4b;
+    border: 1.5px black;
+    border-color: white;
+    color: #fff;
+    border-radius: 0.3em;
+  
+  }
+  .letter-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center ;
+    gap: 0.6em;
+  }
+  #letter-container button {
+    height: 2.4em;
+    width: 2.4em;
+    border-radius: 0.3em;
+    background-color: #220d4b;
+    border-color: white;
+    cursor: pointer;
+    color: white;
+  }
+  #letter-container button:hover{
+    background-color: #11042b;
+  }
+  .new-game-popup {
+    background-color: #ffffff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 0.6em;
+  }
+  
+  #user-input-section {
+    display: flex;
+    justify-content: center;
+    font-size: 1.8em;
+    margin: 0.6em 0 1.2em 0;
+    color: #220d4b;
+  }
+  canvas {
+    display: block;
+    margin: auto;
+    border: 5px solid #220d4b;
+    border-radius: 5px;
+  }
+  .hide {
+    display: none;
+  }
+  #result-text h2 {
+    font-size: 1.8em;
+    text-align: center;
+  }
+  #result-text p {
+    font-size: 1.25em;
+    margin: 1em 0 2em 0;
+  }
