--- a/style.css
+++ b/style.css
@@ -114,3 +114,21 @@
     font-size: 1.25em;
     margin: 1em 0 2em 0;
   }
+  #result-text span {
+    font-weight: 600;
+  }
+  #new-game-button {
+    font-size: 1.25em;
+    padding: 0.5em 1em;
+    background-color: #220d4b;
+    border: 1.5px solid #000000;
+    color: #fff;
+    border-radius: 0.2em;
+    cursor: pointer;
+  }
+  .win-msg {
+    color: #39d78d;
+  }
+  .lose-msg {
+    color: #fe5152;
+  }
